# stm32f746-x-cube-ai-mnist

./: README.md  build.sh  flash.sh
extras/: digit.csv  elfread_libNetworkRuntime400_CM7_GCC.txt
jupyter_notebook/: MNIST-TensorFlow.ipynb  digit.txt
jupyter_notebook/FbComm/: FbComm.py
source/: CMakeLists.txt  STM32F746NGHx_FLASH.ld  mnist-quant.tflite
source/cmake/: cmsis_dsp_lib.cmake  flatbuffers_lib.cmake  flatcc.cmake  stm32f7_hal_driver.cmake  stm_ai_lib.cmake
source/libs/flatcc/src/runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/schema/: create-header.sh
source/src/: CMakeLists.txt  app_x-cube-ai.c  main.c  main.cpp  mnistkeras.c  mnistkeras_data.c  stm32f7_helper_func.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  syscalls.c
source/src/inc/: app_x-cube-ai.h  comm_buffer.h  constants_ai.h  digit.h  main.h  mnist_schema_generated.h  mnistkeras.h  mnistkeras_data.h  schema_builder.h  schema_reader.h  schema_verifier.h  stm32f7_helper_func.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
